Support for Web3 on swagger
        I've added a new endpoint in order to test how to integrate the
        API to a contract on ganache.

        TODO: Send keys and addresses to a config environment file.
