# api/controllers/document.js
@@ -12,6 +12,18 @@ const saveFile = (req, res) => {
     })
 }
 
+const saveHash = (req, res) => {
+  const hash = req.swagger.params.hash.value.hash
+  documentService.saveHash(hash)
+    .then(result => {
+      res.status(201).send({result})
+    })
+    .catch(error => {
+      controllerHelper.handleError(error, res)
+    })
+}
+
 module.exports = {
-  saveFile
+  saveFile,
+  saveHash
 }
